--- a/src/Navigation/main.scss
+++ b/src/Navigation/main.scss
@@ -1,14 +1,14 @@
-header{
+header {
   width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   box-shadow: 0 3px 6px #00000029;
   opacity: 1;
 }
 
-.nav_container{
+.nav_container {
   width: 1152px;
   height: 60px;
   display: flex;
@@ -16,68 +16,84 @@ header{
   align-items: center;
 }
 
-.logo{
+.logo {
   margin-left: 25px;
   display: flex;
-  color: #08A6E4;
-  font-family: 'Raleway', sans-serif;
+  color: #08a6e4;
+  font-family: "Raleway", sans-serif;
   font-size: 32px;
   font-weight: 300;
-  @media screen and (min-width: 750px){
+  @media screen and (min-width: 750px) {
     margin-left: 0;
-  } 
+  }
 }
 
-.navigation{
+.navigation {
   display: none;
-  @media screen and (min-width: 750px){
+  @media screen and (min-width: 750px) {
     list-style: none;
     height: 60px;
     width: 544px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-weight: bold;
-  } 
+  }
 }
 
-.nav_li{
+.menuLink {
+  height: 52px;
+  width: 86px;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 52px;
-  width: 86px;
-  color: #A5A5A5;
-  font-family: 'Open Sans', sans-serif;
+  text-decoration: none;
+  color: #a5a5a5;
+  font-family: "Open Sans", sans-serif;
   font-size: 11px;
   letter-spacing: 3.28px;
   border-top: 4px solid transparent;
   border-bottom: 4px solid transparent;
+  text-transform: uppercase;
 }
 
-.nav_li:hover{
+.menuLink:hover {
   color: #000000;
   cursor: pointer;
-  border-bottom: 4px solid #08A6E4;
+  border-bottom: 4px solid #08a6e4;
 }
 
-.burger{
+.burger_container {
+  width: 17%;
+  height: 100%;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  @media screen and (min-width: 750px) {
+    display: none;
+  }
+}
+
+.burger {
   width: 20px;
   height: 20%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   margin-right: 30px;
-  @media screen and (min-width: 750px){
+  @media screen and (min-width: 750px) {
     display: none;
-  } 
+  }
 }
 
-.bar1, .bar2, .bar3{
+.bar1,
+.bar2,
+.bar3 {
   height: 14%;
   width: 100%;
-  background-color: #07ACE6;
+  background-color: #07ace6;
   transition: 0.4s;
 }
 
@@ -86,7 +102,9 @@ header{
   transform: rotate(-45deg) translate(-9px, 6px);
 }
 
-.change .bar2 {opacity: 0;}
+.change .bar2 {
+  opacity: 0;
+}
 
 .change .bar3 {
   -webkit-transform: rotate(45deg) translate(-8px, -8px);
