--- a/src/Pricing/main.scss
+++ b/src/Pricing/main.scss
@@ -1,120 +1,156 @@
-section {
+.section_pricing {
   width: 100vw;
-  height: 100vh;
+  height: 150vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #F7F7F7;
+  @media screen and (min-width: 750px) {
+    height: 100vh;
+  }
 }
 
-.pricing_container {
-  width: 80vw;
-  height: 75vh;
-}
-
-.h3_pricing{
+.h3_pricing {
   font-size: 34px;
   text-align: center;
+  margin-bottom: 15px;
 }
 
-.pricing_container_info{
-  display: flex;
-  justify-content: space-around;
-  align-items:center;
-  flex-direction: row;
-  width: 100%;
-  height: 100%;
-}
-
-.basic, .premium, .professional{
-  height: 80%;
-  width: 28%;
+.pricing_container_info {
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
-  border: 1px solid #FB3B64;
+  width: 100%;
+  height: 100%;
+  @media screen and (min-width: 750px) {
+    flex-direction: row;
+    width: 100vw;
+  }
+}
+
+.basic,
+.premium,
+.professional {
+  width: 78vw;
+  height: 35vh;
+  border: 1px solid hsl(347, 96%, 61%);
   border-radius: 18px;
+  margin-bottom: 4rem;
+  @media screen and (min-width: 750px) {
+    height: 60vh;
+    width: 25vw;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+  }
 }
 
-.professional{
+.single_pricing_container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
   height: 90%;
-  width: 30%;
-  border-color: #07ACE6;
-  box-shadow: 5px 10px 27px #07ACE629;
+  @media screen and (min-width: 750px) {
+    width: 90%;
+    flex-direction: column;
+  }
 }
 
-.premium{
-  border-color: #55DFB4;
+.professional {
+  height: 40vh;
+  width: 90vw;
+  border-color: #07ace6;
+  box-shadow: 5px 10px 27px #07ace629;
+  @media screen and (min-width: 750px) {
+    width: 30vw;
+    height: 70vh;
+  }
 }
 
-.title{
+.premium {
+  border-color: #55dfb4;
+}
+
+.title {
   font-size: 18px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
-  color: #13253B;
+  color: #13253b;
   margin-top: 10%;
+  text-align: center;
 }
 
-.price{
-  font-family: 'Open Sans', sans-serif;
+.price {
+  font-family: "Open Sans", sans-serif;
   font-size: 46px;
   font-weight: 300;
+  margin: 10px;
 }
 
-.price_basic{
-  color:#FB3B64;
+.price_basic {
+  color: #fb3b64;
 }
 
-.price_professional{
-  color:#07ACE6;
+.price_professional {
+  color: #07ace6;
+  text-align: center;
 }
 
-.price_premium{
-  color: #55DFB4
+.price_premium {
+  color: #55dfb4;
 }
 
-.price_limit{
-  font-family: 'Raleway', sans-serif;
+.price_limit {
+  font-family: "Raleway", sans-serif;
   font-size: 12px;
   font-weight: bold;
+  text-align: center;
 }
 
-.price_list{
+.price_list {
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-direction: column;
-  height: 40%;
-  font-family: 'Open Sans', sans-serif;
+  height: 75%;
+  font-family: "Open Sans", sans-serif;
   font-size: 13px;
   margin-top: 10%;
+  @media screen and (min-width: 750px) {
+    height: 45%;
+  }
 }
 
-.include, .not_include{
+.include,
+.not_include {
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 12px;
 }
 
-.include::before{
-  content: '';
-  border: 1px solid #55DFB4;
+.include::before {
+  content: "";
+  border: 1px solid #55dfb4;
   border-radius: 2px;
   display: inline-block;
   height: 10px;
   width: 10px;
-  background-image: url('../images/Checkmark.png');
+  background-image: url("../images/Checkmark.png");
   background-size: 5px 5px;
   background-repeat: no-repeat;
   background-position: center;
   margin-right: 8px;
 }
 
-.not_include::before{
-  content: 'x';
-  color:#EB476E;
-  border: 1px solid #EB476E;
+.not_include::before {
+  content: "x";
+  color: #eb476e;
+  border: 1px solid #eb476e;
   border-radius: 2px;
   display: inline-block;
   height: 10px;
@@ -125,24 +161,31 @@ section {
   font-size: 11px;
 }
 
-.button_begin{
+.button_begin {
   border-radius: 23px;
   height: 50px;
   width: 150px;
   cursor: pointer;
-  background-color: #EB476E;
-  color: #FFFFFF;
+  background-color: #eb476e;
+  color: #ffffff;
   border: none;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 13px;
   font-weight: bold;
-  transform: translate(0,65%);
+  transform: translate(50%, 0%);
+  @media screen and (min-width: 750px) {
+    transform: translate(0, 50%);
+  }
 }
 
-.button_premium{
-  background-color: #55DFB4;
+.button_premium {
+  background-color: #55dfb4;
 }
 
-.button_professional{
-  background-color: #07ACE6;
+.button_professional {
+  background-color: #07ace6;
+  transform: translate(60%, 5%);
+  @media screen and (min-width: 750px) {
+    transform: translate(0, 50%);
+  }
 }
